
Revision history for {{$dist->name}}

{{$NEXT}}
    [API changes]
    - The --service_name parameter has been dropped, since it makes no sense when
    used with multiple services or instances
    [New features]
    - Thanks to Syntax::Keyword::Equ, match() now supports `equ` as an operator

0.010     2021-07-22 07:14:15+00:00 UTC
    [New features]
    - Metrics adapter type is now configurable using --metrics_adapter.
    - Metrics destination can be changed using --metrics_host and --metrics_port.

    [Bugs fixed]
    - RPC client to track message id for response before sending it.
    - Subscription to use the right group name to acknowledge from stream.

    [Dependencies]
    - Object::Pad - use new ->begin_class from MOB package.
    - Metrics::Any - update to v0.07 to disable metrics from certain packages.
    - Metrics::Any::Adapter::Statsd - instead of DogStatsd standard.

0.009     2021-07-14 18:39:34+08:00 Asia/Kuala_Lumpur
    [API Changes]
    - Syntax::Keyword::Match is now imported in Myriad::Service code
    - Redis: A service will not create another service's stream.
    - Allow service namespaces by adding '::*' to the startup command.

    [New features]
    - Added incr method for storage keys.

0.008     2021-06-18 05:24:31+00:00 UTC
    [API Changes]
    - Breaking: RPC client will unwrap the extra 'response' level from the response.
    - Myriad now has run_future like shutdown_future, to tell when the framework is running.
    - Test::Myriad has a ready sub, to tell when the underlying Myriad is running.
    - Batch will now throw an exception and fail if the developer didn't return arrayref.

    [Bugs fixed]
    - Having multiple RPC added will not block and wait each others from reading from stream.

0.007     2021-05-21 14:22:03+00:00 UTC
    [Bugs fixed]
    - RPC reading multiple items from stream but processing only one.

    [Dependencies]
    - Object::Pad - Use officially documented way to obtain metaclasses.
