@@ -38,7 +38,7 @@ my %WriteMakefileArgs = (
     "IO::Async::Test" => "0.79",
     "JSON::MaybeUTF8" => "2.000",
     "List::Keywords" => "0.08",
-    "List::Util" => "1.59",
+    "List::Util" => "1.60",
     "Log::Any" => "1.710",
     "Log::Any::Adapter" => "1.710",
     "Log::Any::Adapter::OpenTracing" => "0.001",
@@ -53,7 +53,7 @@ my %WriteMakefileArgs = (
     "Net::Async::OpenTracing" => "1.000",
     "Net::Async::Redis" => "3.016",
     "Net::Async::SMTP" => "0.002",
-    "Object::Pad" => "0.53",
+    "Object::Pad" => "0.55",
     "OpenTracing::Any" => "1.003",
     "Pod::Simple::Text" => 0,
     "Pod::Usage" => 0,
@@ -64,12 +64,12 @@ my %WriteMakefileArgs = (
     "Syntax::Keyword::Defer" => "0.06",
     "Syntax::Keyword::Dynamically" => "0.09",
     "Syntax::Keyword::Match" => "0.08",
-    "Syntax::Keyword::Try" => "0.25",
+    "Syntax::Keyword::Try" => "0.26",
     "Syntax::Operator::Equ" => "0.02",
     "Sys::Hostname" => 0,
     "Time::Moment" => "0.44",
     "Unicode::UTF8" => 0,
-    "XS::Parse::Keyword" => "0.18",
+    "XS::Parse::Keyword" => "0.21",
     "YAML::XS" => "0.83",
     "bareword::filehandles" => 0,
     "curry" => "1.001",
@@ -121,7 +121,7 @@ my %FallbackPrereqs = (
   "IPC::Open3" => 0,
   "JSON::MaybeUTF8" => "2.000",
   "List::Keywords" => "0.08",
-  "List::Util" => "1.59",
+  "List::Util" => "1.60",
   "Log::Any" => "1.710",
   "Log::Any::Adapter" => "1.710",
   "Log::Any::Adapter::OpenTracing" => "0.001",
@@ -138,7 +138,7 @@ my %FallbackPrereqs = (
   "Net::Async::OpenTracing" => "1.000",
   "Net::Async::Redis" => "3.016",
   "Net::Async::SMTP" => "0.002",
-  "Object::Pad" => "0.53",
+  "Object::Pad" => "0.55",
   "OpenTracing::Any" => "1.003",
   "Pod::Simple::Text" => 0,
   "Pod::Usage" => 0,
@@ -149,7 +149,7 @@ my %FallbackPrereqs = (
   "Syntax::Keyword::Defer" => "0.06",
   "Syntax::Keyword::Dynamically" => "0.09",
   "Syntax::Keyword::Match" => "0.08",
-  "Syntax::Keyword::Try" => "0.25",
+  "Syntax::Keyword::Try" => "0.26",
   "Syntax::Operator::Equ" => "0.02",
   "Sys::Hostname" => 0,
   "Test::CheckDeps" => "0.010",
@@ -162,7 +162,7 @@ my %FallbackPrereqs = (
   "Test::NoTabs" => 0,
   "Time::Moment" => "0.44",
   "Unicode::UTF8" => 0,
-  "XS::Parse::Keyword" => "0.18",
+  "XS::Parse::Keyword" => "0.21",
   "YAML::XS" => "0.83",
   "bareword::filehandles" => 0,
   "curry" => "1.001",
