@@ -3,16 +3,16 @@ requires 'mro';
 requires 'indirect';
 requires 'multidimensional';
 requires 'bareword::filehandles';
-requires 'XS::Parse::Keyword', '>= 0.18';
+requires 'XS::Parse::Keyword', '>= 0.21';
 requires 'Syntax::Keyword::Dynamically', '>= 0.09';
-requires 'Syntax::Keyword::Try', '>= 0.25';
+requires 'Syntax::Keyword::Try', '>= 0.26';
 requires 'Syntax::Keyword::Defer', '>= 0.06';
 requires 'Syntax::Keyword::Match', '>= 0.08';
 requires 'Syntax::Operator::Equ', '>= 0.02';
 requires 'Future', '>= 0.47';
 requires 'Future::Queue';
 requires 'Future::AsyncAwait', '>= 0.53';
-requires 'Object::Pad', '>= 0.53';
+requires 'Object::Pad', '>= 0.55';
 requires 'Role::Tiny', '>= 2.002004';
 # Streams
 requires 'Ryu', '>= 3.002';
@@ -44,7 +44,7 @@ requires 'Module::Pluggable::Object';
 requires 'Math::Random::Secure';
 requires 'Getopt::Long';
 requires 'Pod::Usage';
-requires 'List::Util', '>= 1.59';
+requires 'List::Util', '>= 1.60';
 requires 'List::Keywords', '>= 0.08';
 # Integration
 requires 'Net::Async::OpenTracing', '>= 1.000';
